--- a/dice/src/Die.css
+++ b/dice/src/Die.css
@@ -1,6 +1,41 @@
 .Die-piece {
    font-size: 10em;
    color: rgb(165, 34, 165);
-   margin-left: 15px;
-   margin-right: 15px;
+   margin-left: 0.25em;
+   margin-right: 0.25em;
 }
+
+.shaking {
+   animation-name: wobble;
+   animation-duration: 1s;
+ }
+ 
+ @keyframes wobble {
+   from {
+     transform: translate3d(0, 0, 0);
+   }
+ 
+   15% {
+     transform: translate3d(-25%, 0, 0) rotate3d(0, 0, 1, -5deg);
+   }
+ 
+   30% {
+     transform: translate3d(20%, 0, 0) rotate3d(0, 0, 1, 3deg);
+   }
+ 
+   45% {
+     transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -3deg);
+   }
+ 
+   60% {
+     transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 2deg);
+   }
+ 
+   75% {
+     transform: translate3d(-5%, 0, 0) rotate3d(0, 0, 1, -1deg);
+   }
+ 
+   to {
+     transform: translate3d(0, 0, 0);
+   }
+ }
